intel-esque theme

--- a/assets/index.html
+++ b/assets/index.html
@@ -1,38 +1,76 @@
 <html ng-app="appLauncher">
 <head>
   <title>Minimal Bootflat example</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
   <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/bootflat.css">
-  <!-- Bootstrap -->
-  <script src="/js/jquery-1.11.0.min.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-
-  <!-- Bootflat's JS files.-->
-  <script src="/js/icheck.min.js"></script>
-  <script src="/js/jquery.fs.selecter.min.js"></script>
-  <script src="/js/jquery.fs.stepper.min.js"></script>
-
-  <script src="/js/angular.min.js"></script>
-  <script src="/js/angular-ui-router.min.js"></script>
-  <script src="/js/app.min.js"></script>
-
+  <link rel="stylesheet" href="/css/theme.css">
 </head>
 
-<body>
-  <nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-      <!-- Brand and toggle get grouped for better mobile display -->
+<body role="document">
+
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
       <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" href="/">ATK Server</a>
       </div>
-    </div><!-- /.container-fluid -->
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Servers <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="/servers">List</a></li>
+              <li class="divider"></li>
+              <li><a href="/servers/some-uuid">intel/myspace</a></li>
+              <li><a href="/servers/some-uuid">intel/myteamspace</a></li>
+              <li><a href="/servers/some-uuid">myorg/dev</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="/login/">Login</a></li>
+        </ul>
+      </div><!--/.nav-collapse -->
+    </div>
   </nav>
+
+
+  <div class="jumbotron">
+    <div class="container">
+      <h1>ATK Server with Spark/Hadoop</h1>
+      <p>It has never been easier to analyse data. Launch an Intel Analytic Toolkit (ATK) Server
+      with a Cloudera Hadoop and Apache Spark backend within minutes.</p>
+      <p><a class="btn btn-primary btn-lg" href="#" role="button">Launch &raquo;</a></p>
+    </div>
+  </div>
+
+
+
+
+<!-- Bootstrap -->
+<script src="/js/jquery-1.11.0.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+
+<!-- Bootflat's JS files.-->
+<script src="/js/icheck.min.js"></script>
+<script src="/js/jquery.fs.selecter.min.js"></script>
+<script src="/js/jquery.fs.stepper.min.js"></script>
+
+<script src="/js/angular.min.js"></script>
+<script src="/js/angular-ui-router.min.js"></script>
+<script src="/js/app.js"></script>
 
 </body>
 </html>
