bit of a logged-in user widget

--- a/assets/index.html
+++ b/assets/index.html
@@ -40,7 +40,11 @@
           </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="/login/">Login</a></li>
+          <li class="active"><a href="/login">Login</a></li>
+          <li>&nbsp;&nbsp;</li>
+          <li><img src="https://avatars0.githubusercontent.com/u/108?v=3&s=48" alt="drnic" class="img-circle"></li>
+          <li><a href="/profile">drnicwilliams@gmail.com</a></li>
+          <li><a href="/logout">Logout</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
