--- a/assets/index.html
+++ b/assets/index.html
@@ -61,7 +61,29 @@
   </div>
 
 
+  <ol class="breadcrumb">
+    <li>Page: Home</li>
+    <li class="active">Request new cluster</li>
+  </ol>
 
+  <div class="container">
+    <form role="form">
+      <div class="form-group">
+        <label for="organization">Organization</label>
+        <select id="organization" class="form-control">
+          <option>intel</option>
+          <option>intel-demo</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="project">Project name</label>
+        <div class="input-group">
+          <span class="input-group-addon">@</span>
+          <input type="text" class="form-control" id="project" placeholder="(changable)">
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Launch</button>
+  </div>
 
 <!-- Bootstrap -->
 <script src="/js/jquery-1.11.0.min.js"></script>
