--- a/assets/index.html
+++ b/assets/index.html
@@ -14,7 +14,7 @@
 <body role="document">
 
   <!-- Fixed navbar -->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="NavBarCtrl">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -29,13 +29,11 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Servers <span class="caret"></span></a>
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Servers <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="/servers">List</a></li>
               <li class="divider"></li>
-              <li><a href="/servers/some-uuid">intel/myspace</a></li>
-              <li><a href="/servers/some-uuid">intel/myteamspace</a></li>
-              <li><a href="/servers/some-uuid">myorg/dev</a></li>
+              <li ng-repeat="app in apps"><a href="#/app/provision/{{ app.guid }}">{{ app.name }}</a></li>
             </ul>
           </li>
         </ul>
